<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jadwal Ibadah dan Kegiatan"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:id="@+id/ibadahumum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:paddingBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ibadah"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pagi"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siang"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sore"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anak"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/persekutuan"
        android:layout_below="@id/ibadahumum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:paddingBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pers"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prkj"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ppkj"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pdrabu"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/paduansuara"
        android:layout_below="@id/persekutuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:paddingBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ps"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psamarisa"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psgihon"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/lain"
        android:layout_below="@id/paduansuara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:paddingBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keglain"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lgnsekar"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leks"
                android:textColor="@color/black"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kate"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
