<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.Info">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profil Gereja"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="231dp"
            android:src="@drawable/aimg20220130101033">
        </ImageView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gkj_jebres1"
                android:textSize="21dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/isi_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black">
            </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sejarah"
                    android:textSize="21dp"
                    android:textColor="@color/black"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/isi_sejarah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visi"
                    android:textSize="21dp"
                    android:textColor="@color/black"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/isi_visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/misi"
                    android:textSize="21dp"
                    android:textColor="@color/black"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/isi_misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>
        </ScrollView>
</LinearLayout>